@@ -10,5 +10,5 @@ Glossary
      A textual format and syntax for configuration and serialization.
      See the `YAML website <http://yaml.org>`_.
   directive
-     A callable that handles a configuration section, populating a
-     registry.
+     A callable that handles a configuration section, populating state
+     attached to a context object.
